# basic-py-proj

./: .gitignore  .tool-versions  README.md  pyproject.toml
src/: aggregate_time_series.py  main.py
tests/: test_aggregate_time_series.py  test_hello.py  test_main.py
